--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           image-ref: pacman-game:${{ env.IMAGE_TAG }}
           exit-code: '1'
-          severity: 'CRITICAL,HIGH'   
+          severity: 'CRITICAL'   
           
       - name: Push Docker image to Docker Hub
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
